<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical"
    android:layout_margin="@dimen/margem">


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/nome"
        android:background="@color/colorPrimary"
        android:textColor="@android:color/white"/>

    <EditText
        android:id="@+id/edtNome"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textCapCharacters"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/sexo"
        android:background="@color/colorPrimary"
        android:textColor="@android:color/white"/>

    <RadioGroup
        android:id="@+id/rdgSexo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/rdbMasc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/masc"/>

        <RadioButton
            android:id="@+id/rdbFem"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/fem"/>

    </RadioGroup>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/email"
        android:background="@color/colorPrimary"
        android:textColor="@android:color/white"/>

    <EditText
        android:id="@+id/edtEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/tel"
        android:background="@color/colorPrimary"
        android:textColor="@android:color/white"/>

    <EditText
        android:id="@+id/edtTel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="phone"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/pref"
        android:background="@color/colorPrimary"
        android:textColor="@android:color/white"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginBottom="@dimen/margem"
        android:layout_marginTop="@dimen/margem">

        <CheckBox
            android:id="@+id/chkMusica"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/musica"/>

        <CheckBox
            android:id="@+id/chkCinema"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cinema"/>

        <CheckBox
            android:id="@+id/chkEsporte"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/esporte"/>

        <CheckBox
            android:id="@+id/chkGastronomia"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/gastronomia"/>

    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/notif"
        android:background="@color/colorPrimary"
        android:textColor="@android:color/white"/>

    <Switch
        android:id="@+id/swtNotif"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textOff="@string/off"
        android:textOn="@string/on"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginBottom="@dimen/margem"
        android:layout_marginTop="@dimen/margem">

        <Button
            android:id="@+id/btnExibir"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/exibir"/>

        <Button
            android:id="@+id/btnLimpar"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/limpar"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/lblDados"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@color/background"
        android:visibility="invisible"
        android:padding="@dimen/padding">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/txtNome"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="@dimen/padding"/>

            <TextView
                android:id="@+id/txtSexo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

        </LinearLayout>

        <TextView
            android:id="@+id/txtEmail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/txtTel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/txtPref"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/txtNotif"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

    </LinearLayout>

</LinearLayout>